made recall trail (#165)
* a

* added level scaling

* made trail look better

* made health gained a val

* nerfed health

* changed how recall health is calculated

* made recall useless

* made recall even more useless

* made recall worse worse worse(and customizable)

* added duration to config

* remove debugging stuff

* fixed recall health being curr health instead of prev health

* removed old health

* Recall bonanza

---------

Co-authored-by: Braulio <bchamerry@gmail.com>